--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 2.8)
-set(PROJECT jdks)
+set(PROJECT jdkssrp)
+set(ADDITIONAL_INCLUDE_DIRECTORIES ../jdksavdecc-c/include)
 
 INCLUDE (common.cmake)
 
